--- a/experiments/01_incremental/index.html
+++ b/experiments/01_incremental/index.html
@@ -34,7 +34,7 @@
     <link href="css/local-style.css" rel="stylesheet" type="text/css"/>
 
     <!-- experiment file -->
-	<script src="js/experiment.js"></script>
+	<script src="js/index.js"></script>
 	
 	<!-- stimuli file -->
 	<script src="js/stimuli.js"></script>
