--- a/experiments/01_incremental/pilot/index.html
+++ b/experiments/01_incremental/pilot/index.html
@@ -19,7 +19,8 @@
     <script src="shared/js/stream-V2.js"></script>
 
     <!-- cocolab general utilities -->
-    <script src="shared/js/mmturkey.js"></script> <!--manages submitting data to Mechanical Turk. -->
+    <!--<script src="shared/js/mmturkey.js"></script> */manages submitting data to Mechanical Turk. -->
+		<script src="https://proliferate.alps.science/static/js/proliferate.js" type="text/javascript"></script>
     <script src="shared/js/browserCheck.js"></script>
     <script src="shared/js/utils.js"></script>
     <!-- if you want to draw cute creatures (depends on raphael): -->
@@ -47,23 +48,24 @@
 	<div class="slide" id="i0" >
         <p style="margin-top: 100px"><strong>Welcome to our experiment!</strong></p>
 		<!--<img src="images/alps_lab.png" alt="Alps Lab"  style="width:300">-->
-   		<p id="instruct-text">In this experiment, you will see several scenes and you will be asked to play a guessing game. <br> The study should take about 5 minutes. </p>
-        <br>
-        <p><strong>Consent</strong></p>
-        <p>Before the experiment can begin, please read the linked document carefully. <br> You can download the copy of the PDF if you want to take a look later. <br> <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">Information sheet</a> </p> <br>
-        <ul>
+   		<p id="instruct-text">In this experiment, you will see several scenes and you will be asked to play a guessing game. <br> The study should take about 6 minutes. </p>
+
+      <p><strong>Consent</strong></p>
+        <p>Before the experiment can begin, please read this <a href="https://ling-sunc.github.io./scalar-adverbs/ethics/Info_sheet_online_adults.pdf" target="_blank">Information sheet</a> carefully. <br> You can download the copy of the PDF if you want to take a look later.</p>
+
+      <div class="consent">
+				<ul>
             <li>I have been informed in writing or verbally about the LeibnizDream language study and my questions have been answered satisfactorily and I have read the information sheet carefully.</li>
             <li>I have understood what data will be stored about me.</li>
             <li>I have understood which data of me will be made publicly available in anonymous form for non-commercial use.</li>
             <li>I have been fully informed about the legal basis of data processing and about the persons responsible in accordance with the GDPR.</li>
             <li>I hereby consent to participate in this study.</li>
         </ul>
+			</div>
 
-        <p>We invite you to participate in a research study on language comprehension. We will record your responses and responses may be timed. The entire experiment will take approximately 5 minutes. You will be paid for your participation at the posted rate.<br><br>Your data will be stored safely and anonymously, and will be used for (non-commercial) research purposes only. You can close the browser window at any time to stop the experiment and no data will be stored. However, you will not receive payment until after finishing the entire experiment.<br></p>
-   		<button id="start_button" type="button">I have read the above and agree with the conditions. <br> Start Experiment</button>
-    	<br>
-		<!--<p id="instruct-text" align="left"><i><small><small>There are no risks or benefits of any kind involved in this study.<br>If you have read this form and have decided to participate in this experiment, please understand your participation is voluntary and you have the right to withdraw your consent or discontinue participation at any time without penalty or loss of benefits to which you are otherwise entitled. You have the right to refuse to do particular tasks. Your individual privacy will be maintained in all published and written data resulting from the study.<br>You may print this form for your records.<br>CONTACT INFORMATION:<br>If you have any questions, concerns or complaints about this research study, its procedures, risks and benefits, you should contact the Protocol Director Meghan Sumner at <br>(650)-725-9336<br>If you are not satisfied with how this study is being conducted, or if you have any concerns, complaints, or general questions about the research or your rights as a participant, please contact the Stanford Institutional Review Board (IRB) to speak to someone independent of the research team at (650)-723-2480 or toll free at 1-866-680-2906. You can also write to the Stanford IRB, Stanford University, 3000 El Camino Real, Five Palo Alto Square, 4th Floor, Palo Alto, CA 94306 USA.<br>If you agree to participate, please proceed to the study tasks.<br>
-		</small></small></i></p> -->
+   		<button id="start_button" type="button">I consent. <br> Start Experiment</button>
+
+		<!--<p id="instruct-text" align="left"><i><small><small>There are no risks or benefits of any kind involved in this study.<br>If you have read this form and have decided to participate in this experiment, please understand your participation is voluntary and you have the right to withdraw your consent or discontinue participation at any time without penalty or loss of benefits to which you are otherwise entitled. You have the right to refuse to do particular tasks. Your individual privacy will be maintained in all published and written data resulting from the study.<br>You may print this form for your records.<br>CONTACT INFORMATION:<br>If you have any questions, concerns or complaints about this research study, its procedures, risks and benefits, you should contact the Protocol Director Meghan Sumner at <br>(650)-725-9336<br>If you are not satisfied with how this study is being conducted, or if you have any concerns, complaints, or general questions about the research or your rights as a participant, please contact the Stanford Institutional Review Board (IRB) to speak to someone independent of the research team at (650)-723-2480 or toll free at 1-866-680-2906. You can also write to the Stanford IRB, Stanford University, 3000 El Camino Real, Five Palo Alto Square, 4th Floor, Palo Alto, CA 94306 USA.<br>If you agree to participate, please proceed to the study tasks.<br></small></small></i></p>-->
     </div>
 
 	<!--Instruction slide-->
@@ -179,17 +181,6 @@
 
 	      <p>Were there any problems or bugs in the experiment?</p>
 	      <textarea id="problems" rows="2" cols="50"></textarea>
-
-	      <p>Level Of Education:
-	        <select id="education">
-	          <label><option value="-1"/></label>
-	          <label><option value="0"/>Some High School</label>
-	          <label><option value="1"/>Graduated High School</label>
-	          <label><option value="2"/>Some College</label>
-	          <label><option value="3"/>Graduated College</label>
-	          <label><option value="4"/>Hold a higher degree</label>
-	        </select>
-	      </p>
 
 	      <p>We would be interested in any comments you have about this experiment. Please type them here:</p>
 	      <textarea id="comments" rows="3" cols="50"></textarea>
