--- a/experiments/02_incremental/main/list3/index.html
+++ b/experiments/02_incremental/main/list3/index.html
@@ -71,7 +71,7 @@
 	<!--Instruction slide-->
 	<div class="slide" id="instructions">
   		<h3>Instructions</h3>
-  		<p> You will see a scene containing four objects and a partial description of that scene. Your task is to guess which of the four objects the description is referring to.</p>
+  		<p> You will see a scene with a partial description of it. Your task is to guess which of the four objects the description is referring to.</p>
 		<img src="images/instruction_image.png" alt="instructions"  style="width:250">
 		<br>
 		<p>To make a guess, click on one of the objects. Whenever you make a guess by clicking, more words of the description will appear.</p>
@@ -163,10 +163,9 @@
         <p>Gender:
           <select id="gender">
             <label><option value=""/></label>
-            <label><option value="Man"/>Man</label>
-            <label><option value="Woman"/>Woman</label>
-            <label><option value="Nonbinary"/>Non-binary</label>
-						<label><option value="Other"/>Other/prefer not to say</label>
+						<label><option value="Male"/>Male</label>
+            <label><option value="Female"/>Female</label>
+            <label><option value="Other"/>Other</label>
           </select>
         </p>
 
