Update HTML exp1 list1

--- a/experiments/01_incremental/main/list1/index.html
+++ b/experiments/01_incremental/main/list1/index.html
@@ -47,33 +47,45 @@
 
 	<div class="slide" id="i0" >
         <p style="margin-top: 100px"><strong>Welcome to our experiment!</strong></p>
-		<!--<img src="images/alps_lab.png" alt="Alps Lab"  style="width:300">-->
-   		<p id="instruct-text">In this experiment, you will see several scenes and you will be asked to play a guessing game. <br> The study should take about 6 minutes. </p>
+	
+   		<!-- <p id="instruct-text">In this experiment, you will see several scenes and you will be asked to play a guessing game. <br> The study should take about 6 minutes. </p> -->
+
+	  <p><strong>Information</strong></p>
+	 <ul style="text-align: left;">
+		<li><strong>Name, Address and Contact Details of Investigators</strong><br></li>
+		<li><strong>Details of Study</strong> <br>You are invited to take part in a research study about how people understand sentences in real time. We are interested in how people use language to make predictions and choices. We will record your responses and response times.</li>
+		<li><strong>Duration</strong> <br>About 6 minutes.</li>
+		<li><strong>Risks and Benefits</strong> <br>You are free to withdraw from the experiment at any time. Once you have completed the experiment, you will be paid for your help and will receive our immense gratitude. All data are collected and stored in accordance with the provisions of the General Data Protection Regulations and the Data Protection Act 2018.</li>
+		<li><strong>Contact</strong> <br>For questions about the study, contact Chao Sun at chaosun@pku.edu.cn. For questions about your rights as a participant, contact [Institutional Ethics Board contact].</li>
+</ul>
+
 
       <p><strong>Consent</strong></p>
-        <p>Before the experiment can begin, please read this <a href="https://ling-sunc.github.io./scalar-adverbs/ethics/Info_sheet_online_adults.pdf" target="_blank">Information sheet</a> carefully. <br> You can download the copy of the PDF if you want to take a look later.</p>
+        <!-- <p>Before the experiment can begin, please read this <a href="https://ling-sunc.github.io./scalar-adverbs/ethics/Info_sheet_online_adults.pdf" target="_blank">Information sheet</a> carefully. <br> You can download the copy of the PDF if you want to take a look later.</p> -->
 
       <div class="consent">
-				<ul>
-            <li>I have been informed in writing or verbally about the LeibnizDream language study and my questions have been answered satisfactorily and I have read the information sheet carefully.</li>
-            <li>I have understood what data will be stored about me.</li>
-            <li>I have understood which data of me will be made publicly available in anonymous form for non-commercial use.</li>
-            <li>I have been fully informed about the legal basis of data processing and about the persons responsible in accordance with the GDPR.</li>
-            <li>I hereby consent to participate in this study.</li>
-        </ul>
+			<ul style="text-align:left;">
+		<li>I understand that I have the right to withdraw at any point during the study, for any reason, and without penalty.</li>
+		<li>I understand what data will be stored about me.</li>
+		<li>I understand that anonymized data may be made publicly available for non-commercial use.</li>
+		<li>I have been informed about the legal basis of data processing and the persons responsible in accordance with the GDPR.</li>
+		<li>I consent to participate in this study.</li>
+		</ul>
 			</div>
 
    		<button id="start_button" type="button">I consent. <br> Start Experiment</button>
 
-		<!--<p id="instruct-text" align="left"><i><small><small>There are no risks or benefits of any kind involved in this study.<br>If you have read this form and have decided to participate in this experiment, please understand your participation is voluntary and you have the right to withdraw your consent or discontinue participation at any time without penalty or loss of benefits to which you are otherwise entitled. You have the right to refuse to do particular tasks. Your individual privacy will be maintained in all published and written data resulting from the study.<br>You may print this form for your records.<br>CONTACT INFORMATION:<br>If you have any questions, concerns or complaints about this research study, its procedures, risks and benefits, you should contact the Protocol Director Meghan Sumner at <br>(650)-725-9336<br>If you are not satisfied with how this study is being conducted, or if you have any concerns, complaints, or general questions about the research or your rights as a participant, please contact the Stanford Institutional Review Board (IRB) to speak to someone independent of the research team at (650)-723-2480 or toll free at 1-866-680-2906. You can also write to the Stanford IRB, Stanford University, 3000 El Camino Real, Five Palo Alto Square, 4th Floor, Palo Alto, CA 94306 USA.<br>If you agree to participate, please proceed to the study tasks.<br></small></small></i></p>-->
     </div>
 
 	<!--Instruction slide-->
 	<div class="slide" id="instructions">
   		<h3>Instructions</h3>
-  		<p> You will see a scene with a partial description of it. It is your task to guess which of the objects the description is referring to.</p>
+		<p> In this experiment, you will read sentences that unfold one part at a time while looking at a display. Each display shows four objects:<br>
+		- two spinners, where the arrow can land on one of the sections,<br>
+		- two marble runs, where a marble can end up in one of the slots.<br> </p>
 		<img src="images/instruction_image.png" alt="instructions"  style="width:250">
 		<br>
+		<p> In each trial, you will begin with a partial description, and your task is to guess which object in the display it refers to.</p>
 		<p>To make a guess, click on one of the objects. Whenever you make a guess by clicking, more words of the description will appear.</p>
 		<!-- <p> You will get a bonus* for correct guesses: <br>
 		3.5 cents for correctly guessing on the first, second, and third try. <br>
