--- a/exp1_selfpaced_modals/V1/list4/index.html
+++ b/exp1_selfpaced_modals/V1/list4/index.html
@@ -90,7 +90,7 @@
 
 		<p>Each display shows four objects:<br>
 		- two spinners, where the arrow can land on one of the four sections,<br>
-		- two marble runs, where a marble can end up in one of the four slots.<br></p>
+		- two marble runs, where the marble can end up in one of the four slots.<br></p>
 
 		<img src="images/instruction_image.png" alt="instructions" style="width:250">
 
