--- a/exp3_selfpace_adj/list1/index.html
+++ b/exp3_selfpace_adj/list1/index.html
@@ -88,7 +88,7 @@
   		<h3>Instructions</h3>
 		<p>In each trial, you will read a description that unfolds one part at a time while looking at a display. Your task is to guess which object in the display it refers to.</p>
 
-		<p>Each display shows four objects: <br> two baskets and two vases, each containing flowers in particular colors. </p>
+		<p>Each display shows four objects: <br> two beakers and two flasks, each containing water in particular colors. </p>
 
 		<img src="images/instruction_image.png" alt="instructions" style="width:250">
 
@@ -100,27 +100,39 @@
 
 		<button onclick="_s.button()">Continue</button>
 		
-        <div style="display:none;">
-            <img src="images/vase_5_b.png" alt="" />
-            <img src="images/vase_5_p.png" alt="" />
-            <img src="images/vase_5_y.png" alt="" />
-            <img src="images/vase_2-3_b-p.png" alt="" />
-            <img src="images/vase_2-3_p-b.png" alt="" />
-            <img src="images/vase_2-3_b-y.png" alt="" />
-            <img src="images/vase_2-3_y-b.png" alt="" />
-            <img src="images/vase_2-3_p-y.png" alt="" />
-            <img src="images/vase_2-3_y-p.png" alt="" />
-			<img src="images/basket_5_b.png" alt="" />
-            <img src="images/basket_5_p.png" alt="" />
-            <img src="images/basket_5_y.png" alt="" />
-            <img src="images/basket_2-3_b-p.png" alt="" />
-            <img src="images/basket_2-3_p-b.png" alt="" />
-            <img src="images/basket_2-3_b-y.png" alt="" />
-            <img src="images/basket_2-3_y-b.png" alt="" />
-            <img src="images/basket_2-3_p-y.png" alt="" />
-            <img src="images/basket_2-3_y-p.png" alt="" />
-            <img src="images/loc5.png" alt="" />
-        </div>
+	<div style="display:none;">
+		<!-- Beaker images -->
+		<img src="images/beaker-cold-green.png" alt="" />
+		<img src="images/beaker-cold-orange.png" alt="" />
+		<img src="images/beaker-cold-purple.png" alt="" />
+		<img src="images/beaker-cool-green.png" alt="" />
+		<img src="images/beaker-cool-orange.png" alt="" />
+		<img src="images/beaker-cool-purple.png" alt="" />
+		<img src="images/beaker-hot-green.png" alt="" />
+		<img src="images/beaker-hot-orange.png" alt="" />
+		<img src="images/beaker-hot-purple.png" alt="" />
+		<img src="images/beaker-warm-green.png" alt="" />
+		<img src="images/beaker-warm-orange.png" alt="" />
+		<img src="images/beaker-warm-purple.png" alt="" />
+
+		<!-- Flask images -->
+		<img src="images/flask-cold-green.png" alt="" />
+		<img src="images/flask-cold-orange.png" alt="" />
+		<img src="images/flask-cold-purple.png" alt="" />
+		<img src="images/flask-cool-green.png" alt="" />
+		<img src="images/flask-cool-orange.png" alt="" />
+		<img src="images/flask-cool-purple.png" alt="" />
+		<img src="images/flask-hot-green.png" alt="" />
+		<img src="images/flask-hot-orange.png" alt="" />
+		<img src="images/flask-hot-purple.png" alt="" />
+		<img src="images/flask-warm-green.png" alt="" />
+		<img src="images/flask-warm-orange.png" alt="" />
+		<img src="images/flask-warm-purple.png" alt="" />
+
+		<!-- Location marker -->
+		<img src="images/loc5.png" alt="" />
+	</div>
+
 	</div>
 
     <!--Practice trial slide-->
